# Kesme-Denetleyicisi-Sim-lat-r-

./: .gitignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
e2e/: app.spec.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/algorithms/: FixedPriorityResolver.ts  InterruptPriorityResolver.ts
src/domain/: constants.ts  context.ts  cpu.ts  events.ts  index.ts  interrupt.ts  registers.ts  snapshot.ts  timeline.ts
src/engine/: InterruptControllerSimulator.test.ts  InterruptControllerSimulator.ts  SimulationClock.ts
src/store/: simulationStore.ts
src/ui/components/: ControlBar.tsx  CpuStatusPanel.tsx  EventLogPanel.tsx  InterruptTimeline.tsx  IrqControlPanel.tsx  RegisterCard.tsx  SignalFlowDiagram.tsx  StackPanel.tsx
src/utils/: registerFormatters.ts
