[package]
name = "interruptlab"
version = "0.1.0"
description = "InterruptLab masaüstü kesme denetleyici simülatörü"
authors = ["InterruptLab"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "interruptlab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
